--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.10.1",
     "react-redux": "^7.1.1",
     "react-scripts": "3.1.2",
+    "react-scroll": "^1.7.14",
     "redux": "^4.0.4",
     "semantic-ui-react": "^0.88.1"
   },
